add blog mention

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
     <header>
         <h1>Kaiser Leib</h1>
-        <aside>You can email me, firstlast at gmail dot com. I straight-up copied this from <a href="http://bettermotherfuckingwebsite.com/">bettermotherfuckingwebsite</a></aside>
+        <aside>You can email me, firstlast at gmail dot com. I blog at firstlast dot com. I straight-up copied this from <a href="http://bettermotherfuckingwebsite.com/">bettermotherfuckingwebsite</a></aside>
     </header>
     <h2>Summary</h2>
     <p><strong>I write software that takes HTTP requests and spits out HTTP responses.</strong> It's my very favorite thing.</p>
