add some punctuation

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
     <header>
         <h1>Kaiser Leib</h1>
-        <aside>You can email me, firstlast at gmail dot com. I blog at firstlast dot com. I straight-up copied this from <a href="http://bettermotherfuckingwebsite.com/">bettermotherfuckingwebsite</a></aside>
+        <aside>You can email me, firstlast at gmail dot com. I blog at firstlast dot com. I straight-up copied this from <a href="http://bettermotherfuckingwebsite.com/">bettermotherfuckingwebsite</a>.</aside>
     </header>
     <h2>Summary</h2>
     <p><strong>I write software that takes HTTP requests and spits out HTTP responses.</strong> It's my very favorite thing.</p>
@@ -62,8 +62,8 @@
             graduating in 2009 with a degree in Math and Computer Science.</p>
 
         <h2>Other Stuff</h2>
-        <p>I volunteer as a mentor with a local <a href="http://www.firstinspires.org/robotics/ftc">FIRST Robotics</a> team</p>
-        <p>I am a shoot boss with <a href="http://appleseedinfo.org/">Project Appleseed</a></p>
+        <p>I volunteer as a mentor with a local <a href="http://www.firstinspires.org/robotics/ftc">FIRST Robotics</a> team.</p>
+        <p>I am a shoot boss with <a href="http://appleseedinfo.org/">Project Appleseed</a>.</p>
 </body>
 
 </html>
